--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark" style="color-scheme: dark;">
+
 <head>
   <meta charset="utf-8">
   <title>SDG 14</title>
@@ -7,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+
+<body class="dark dark:bg-gray-500" data-theme="dark">
   <app-root></app-root>
 </body>
+
 </html>
