--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
-<html lang="en" class="dark" style="color-scheme: dark;">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>SDG 14</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>SDG 14</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-
-<body class="dark dark:bg-gray-500" data-theme="dark">
-  <app-root></app-root>
-</body>
-
+  <body class="dark:bg-gray-500">
+    <app-root></app-root>
+  </body>
 </html>
